# dnd

./: .gitignore  .gitmodules  README.md
client/: .dockerignore  .eslintrc  Dockerfile  README.md  materialUI.d.ts  package-lock.json  package.json  tsconfig.json
client/deploy/: httpd.conf
client/deploy/sites-enabled/: 000-https.conf  001-http.conf
client/public/: index.html  manifest.json
client/src/: App.js  index.js  index.tsx  routes.ts
client/src/Header/: index.tsx
client/src/Login/: index.tsx
client/src/Main/: index.tsx
client/src/TitlePage/: Header.tsx  LoginButton.tsx  index.tsx
client/src/apollo/: auth.ts  index.ts
client/src/components/: index.ts
client/src/components/AuthButton/: index.js
client/src/components/LoginGuard/: index.tsx
client/src/components/errors/: NotFound.tsx  index.ts
client/src/components/layouts/: HeaderAndBody.tsx  Root.tsx  index.ts
client/src/stores/: index.js
client/src/stores/Authentication/: index.js
client/src/theme/: cssBaseLine.ts  index.ts  typography.ts
client/src/theme/fonts/: index.ts  utils.ts
client/src/utils/: auth.ts
client/webpack/: build.config.js  develop.config.js  index.ejs
deployment/: README.md  change_secrets.sh  deploy.sh  ingress.yaml  mongo-express-secret.yaml  mongo-express.yaml  mongo-pv.yaml  mongo-pvc.yaml  mongo.yaml  mongodb-deployment.yaml  tls-secret.yaml  webui-deployment.yaml  webui-service.yaml  webui.yaml
deployment/database/: preset.js
server/world/: CMakeLists.txt  README.md
server/world/src/app/: CMakeLists.txt  main.cpp
(+1 files in other folders)
